add: перенес общую логику для обработки файлов в отдельный класс Worker; переписал класс статистики.